src/test/ui/feature-gates/feature-gate-const_generics-struct.rs
struct Foo<const X: usize>([(); X]); //~ ERROR const generics are unstable

fn main() {}
